# imp-skizz-podcast

./: .env.sample  .gitignore  Dockerfile  Pipfile  README.md  bs-config.js  crontab.txt  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: docker-image.yml
jobs/: crontab.txt  print_time.py  sync.py
jobs/clients/: Spotify.py  Spotify_example.json  YouTube.py  YouTube_example.json
podcast_index/: asgi.py  settings.py  urls.py  wsgi.py
podcasts/: admin.py  apps.py  helpers.py  models.py  tests.py  urls.py  views.py
podcasts/management/commands/: sync.py  time.py
podcasts/migrations/: 0001_initial.py  0002_podcast_youtube_id.py  0003_remove_podcast_description.py  0004_podcast_episode_number.py  0005_podcast_spotify_id.py  0006_podcast_apple_music_url.py  0007_remove_podcast_spotify_id_podcast_spotify_url.py  0008_alter_podcast_apple_music_url_and_more.py  0009_alter_podcast_tags.py  0010_remove_podcast_tags_delete_tag.py  0011_podcast_duration_podcast_preview_url.py
podcasts/sync/: helpers.py  sync.py
podcasts/sync/clients/: Spotify.py  YouTube.py
podcasts/templates/podcasts/: index.html
podcasts/templates/podcasts/partials/: filter_results.html  podcast_card.html  podcast_list.html  sidebar.html
podcasts/templatetags/: podcast_tags.py
static/css/: styles.css
